Add SignIn and SignUp Activities

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorPrimaryLight">#98ee99</color>
     <color name="colorAccent">#ffab40</color>
     <color name="colorBackground">#fafafa</color>
-
     <color name="colorTextPrimary">#424242</color>
+    <color name="colorDivider">#BDBDBD</color>
 </resources>
