--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="colorBackground">#fafafa</color>
     <color name="colorTextPrimary">#424242</color>
     <color name="colorDivider">#BDBDBD</color>
+
+    <color name="bannerFilter">#60FFFFFF</color>
+    <color name="transparentStatusBar">#30000000</color>
 </resources>
