--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,10 +2,6 @@
 <resources>
     <dimen name="logo_size">100dp</dimen>
 
-    <dimen name="fab_size">56dp</dimen>
-    <dimen name="fab_mini_size">40dp</dimen>
-    <dimen name="fab_icon_size">24dp</dimen>
-
     <dimen name="icon_size">24dp</dimen>
     <dimen name="divider_size">1dp</dimen>
 
@@ -13,5 +9,7 @@
     <dimen name="button_height">48dp</dimen>
 
     <dimen name="text_app_bar">20sp</dimen>
-    <dimen name="body_text">16sp</dimen>
+    <dimen name="text_body">16sp</dimen>
+    <dimen name="text_header">34sp</dimen>
+    <dimen name="text_sub_header">18sp</dimen>
 </resources>
