--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,8 @@
     <dimen name="button_width">220dp</dimen>
     <dimen name="button_height">60dp</dimen>
 
+    <dimen name="alert_size">36dp</dimen>
+
     <dimen name="text_app_bar">20sp</dimen>
     <dimen name="text_body">16sp</dimen>
     <dimen name="text_header">34sp</dimen>
