--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -32,27 +32,33 @@
 
     </LinearLayout>
 
-    <RelativeLayout
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/divider_size"
+        android:background="@color/colorBackground"
+        android:layout_above="@id/sign_up_layout">
+    </View>
+
+    <LinearLayout
         android:id="@+id/sign_up_layout"
         android:layout_width="match_parent"
         android:layout_height="70dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:layout_alignParentBottom="true">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/divider_size"
-            android:background="@color/colorDivider"
-            android:layout_alignParentTop="true">
-        </View>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/no_account"
             android:textSize="18sp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
             android:layout_marginStart="16dp"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+        </View>
 
         <Button
             android:layout_width="wrap_content"
@@ -61,12 +67,10 @@
             android:textSize="@dimen/text_body"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:textColor="@color/colorPrimary"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
             android:layout_marginEnd="16dp"
             android:onClick="toSignUp"/>
-    </RelativeLayout>
-    
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
