--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,114 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
-    tools:context="com.philippegerbeau.pocketcamping.activities.ProfileActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools">
 
         <RelativeLayout
-            android:id="@+id/green"
+            android:id="@+id/profile_layout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.9"
-            android:background="@color/colorPrimary">
+            android:layout_height="wrap_content"
+            android:background="@color/colorBackground"
+            android:elevation="4dp">
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:background="@color/colorBackground">
+                android:layout_height="120dp"
+                android:background="@color/colorPrimary">
             </View>
+            
+            <ImageButton
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
+                android:src="@drawable/settings_icon"
+                android:scaleType="fitCenter"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="16dp"
+                android:contentDescription="@string/settings"/>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/profile_img"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                app:cardElevation="0dp"
+                app:cardCornerRadius="10dp"
+                android:innerRadius="0dp"
+                android:shape="ring"
+                android:thicknessRatio="1.9"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="30dp">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="116dp"
+                    android:layout_height="116dp"
+                    android:layout_margin="2dp"
+                    app:cardElevation="0dp"
+                    app:cardCornerRadius="8dp"
+                    android:innerRadius="0dp"
+                    android:shape="ring"
+                    android:thicknessRatio="1.9"
+                    android:backgroundTint="@color/colorPrimaryLight">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/user_icon"
+                        android:layout_margin="16dp"
+                        tools:ignore="ContentDescription"/>
+
+                </android.support.v7.widget.CardView>
+
+            </android.support.v7.widget.CardView>
 
             <TextView
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Namour"
-                android:textSize="@dimen/text_header"
-                android:textColor="@android:color/white"
-                android:layout_alignParentBottom="true"
+                android:textColor="@color/colorTextPrimary"
+                android:textSize="20sp"
+                android:layout_below="@id/profile_img"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="8dp"/>
+
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no_plan"
+                android:textSize="14sp"
+                android:textColor="@color/colorTextPrimary"
+                android:layout_below="@id/username"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="16dp"/>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="206dp"
-                android:layout_height="206dp"
-                app:cardCornerRadius="103dp"
-                android:layout_centerHorizontal="true"
-                android:elevation="12dp"
-                android:innerRadius="0dp"
-                android:shape="ring"
-                android:thicknessRatio="1.9"
-                android:layout_above="@+id/username"
-                android:layout_marginBottom="16dp">
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorPrimaryLight">
-
-                    <android.support.v7.widget.CardView
-                        android:layout_marginTop="3dp"
-                        android:layout_marginStart="3dp"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        card_view:cardElevation="0dp"
-                        app:cardElevation="0dp"
-                        app:cardCornerRadius="100dp"
-                        android:innerRadius="0dp"
-                        android:shape="ring"
-                        android:thicknessRatio="1.9"
-                        android:layout_marginBottom="16dp">
-
-                        <ImageView
-                            android:layout_height="match_parent"
-                            android:layout_width="match_parent"
-                            android:src="@drawable/platy"
-                            android:scaleType="centerCrop"
-                            android:layout_alignParentTop="true"
-                            android:layout_centerHorizontal="true"
-                            tools:ignore="ContentDescription">
-                        </ImageView>
-
-                    </android.support.v7.widget.CardView>
-
-                </FrameLayout>
-
-            </android.support.v7.widget.CardView>
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_below="@+id/status"
+                android:elevation="8dp">
+            </android.support.design.widget.TabLayout>
 
         </RelativeLayout>
 
-        <LinearLayout
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimaryLight">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Rien de prévu pour l'instant"
-                    android:textColor="#808080"
-                    android:textSize="@dimen/text_sub_header"
-                    android:padding="20dp"
-                    android:layout_gravity="center"/>
-
-            </FrameLayout>
-
-
-
-        </LinearLayout>
-    </LinearLayout>
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/profile_layout">
+        </android.support.v4.view.ViewPager>
 
 </RelativeLayout>
