--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -38,7 +38,8 @@
                 android:shape="ring"
                 android:thicknessRatio="1.9"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="30dp">
+                android:layout_marginTop="30dp"
+                android:backgroundTint="@color/colorBackground">
 
                 <android.support.v7.widget.CardView
                     android:layout_width="116dp"
