--- a/app/src/main/res/layout/activity_stay_edit.xml
+++ b/app/src/main/res/layout/activity_stay_edit.xml
@@ -57,7 +57,7 @@
                 app:hintEnabled="true"
                 app:errorEnabled="true">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -90,7 +90,7 @@
                 app:hintEnabled="true"
                 app:errorEnabled="true">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/arrival_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -109,7 +109,7 @@
                 app:hintEnabled="true"
                 app:errorEnabled="true">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/departure_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -144,7 +144,7 @@
                 app:hintEnabled="true"
                 app:errorEnabled="true">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/arrival_time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -163,7 +163,7 @@
                 app:hintEnabled="true"
                 app:errorEnabled="true">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/departure_time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -197,7 +197,7 @@
                 app:hintEnabled="true"
                 app:errorEnabled="true">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/spot"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
