--- a/app/src/main/res/layout/fragment_no_stay.xml
+++ b/app/src/main/res/layout/fragment_no_stay.xml
@@ -17,7 +17,7 @@
         tools:ignore="ContentDescription"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/creation_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:fabSize="normal"
