--- a/app/src/main/res/layout/fragment_stay.xml
+++ b/app/src/main/res/layout/fragment_stay.xml
@@ -87,6 +87,7 @@
         android:src="@drawable/edit_icon"
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="16dp"/>
+        android:layout_marginEnd="16dp"
+        android:onClick="stayEdit"/>
 
 </RelativeLayout>
